--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
 </head>
 <body>
     <h1 class="title">Dobble</h1>
+    <div class="presentation">
+        <h2>Bienvenue !</h2>
+        <div class="presentation__imgs">
+            <img src="animals/p10.png" alt="" width="60">
+            <img src="animals/p22.png" alt="" width="60">
+            <img src="animals/p51.png" alt=""width="60">
+            <img src="animals/p55.png" alt=""width="60">
+            <img src="animals/p17.png" alt=""width="60">
+            <img src="animals/p43.png" alt=""width="60">
+            <img src="animals/p19.png" alt=""width="60">
+            <img src="animals/p21.png" alt=""width="60">
+            
+        </div>
+        <p class="endText"></p>
+        <div class="rules">
+            <h3>Règle du jeu</h3>
+                <p> Deux cartes vont vous être présentées.</p>
+                <p>Il faudra cliquer sur la seule image commune aux deux cartes.</p>
+                <p>Cela ne saute pas forcément aux yeux mais il y a TOUJOURS une image commune ! Promis!</p>
+                <p>Alors cherchez bien !</p>
+            </p>
+        </div>
+        <button class="startBtn">JOUER</button>
+    </div>
     <div class="game">
         <div class="model"></div>
         <div class="current"></div>
@@ -20,63 +44,7 @@
         <p>Nombre d'erreurs : <span class="errors">0</span></p>
     </div>
     <div class="cards">
-        <div class="card card0"></div>
-        <div class="card card1"></div>
-        <div class="card card2"></div>
-        <div class="card card3"></div>
-        <div class="card card4"></div>
-        <div class="card card5"></div>
-        <div class="card card6"></div>
-        <div class="card card7"></div>
-        <div class="card card8"></div>
-        <div class="card card9"></div>
-        <div class="card card10"></div>
-        <div class="card card11"></div>
-        <div class="card card12"></div>
-        <div class="card card13"></div>
-        <div class="card card14"></div>
-        <div class="card card15"></div>
-        <div class="card card16"></div>
-        <div class="card card17"></div>
-        <div class="card card18"></div>
-        <div class="card card19"></div>
-        <div class="card card20"></div>
-        <div class="card card21"></div>
-        <div class="card card22"></div>
-        <div class="card card23"></div>
-        <div class="card card24"></div>
-        <div class="card card25"></div>
-        <div class="card card26"></div>
-        <div class="card card27"></div>
-        <div class="card card28"></div>
-        <div class="card card29"></div>
-        <div class="card card30"></div>
-        <div class="card card31"></div>
-        <div class="card card32"></div>
-        <div class="card card33"></div>
-        <div class="card card34"></div>
-        <div class="card card35"></div>
-        <div class="card card36"></div>
-        <div class="card card37"></div>
-        <div class="card card38"></div>
-        <div class="card card39"></div>
-        <div class="card card40"></div>
-        <div class="card card41"></div>
-        <div class="card card42"></div>
-        <div class="card card43"></div>
-        <div class="card card44"></div>
-        <div class="card card45"></div>
-        <div class="card card46"></div>
-        <div class="card card47"></div>
-        <div class="card card48"></div>
-        <div class="card card49"></div>
-        <div class="card card50"></div>
-        <div class="card card51"></div>
-        <div class="card card52"></div>
-        <div class="card card53"></div>
-        <div class="card card54"></div>
-        <div class="card card55"></div>
-        <div class="card card56"></div>    
+            
     </div>
 </body>
 </html>
